2004-10-29  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSimpleTypeList.cs : Added 2.0 BaseItemType property (BTW
	  this property name is really ambiguous and should be changed.)

2004-10-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaAttributeGroup.cs, XmlSchemaGroup.cs :
	  in 2.0, QualifiedName properties are public.
	* XmlSchemaType.cs : TypeCode is [XmlIgnore] (anyways ignored though).

2004-10-22  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs : Implemented GetBuiltInComplexType(XmlTypeCode).

2004-09-22  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaDatatype.cs : handle xdt:* types in FromName().

2004-09-16  Atsushi Enomoto <atsushi@ximian.com>

	* BuiltInDatatype.cs, SchemaDataValueType.cs :
	  ParseValue() for xs:AnyURI should return System.Uri. MS.NET returns
	  XmlSchemaUri, but it is derived from System.Uri, while ours was not.

2004-09-07  Atsushi Enomoto <atsushi@ximian.com>

	* IXmlType.cs : deprecated in .NET 2.0.

2004-09-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchema.cs : When schema inclusion results in a recursion, just
	  skip recursed schema.
	* BUGS-MS.txt : added another entry. Reflected response from Microsoft.

2004-08-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs : quick build fix.

2004-08-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaDatatype.cs : Removed FromName(localName) that cannot
	  handle xdt:* types.
	* XmlSchemaType.cs : added internal GetBuiltInType() methods that
	  mix GetBuiltInSimpleType() and GetBuiltInComplexType().

2004-08-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSimpleType.cs : Fill list types such as xs:IDREFS.
	* XmlSchemaType.cs :
	  Fixed TypeCode more (broken on predefined list types and xs:anyType).

2004-08-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs :
	  anyType was anonymous, thus GetBuiltInComplexType() didn't work.

2004-08-24  Atsushi Enomoto <atsushi@ximian.com>
